--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 264px;
 }
 .like {
   background-color: #fff;
